# PianoAule

./: .clasp.json  .gitignore  Codice.ts  README.md  gui.py  gui.spec  index.html  package-lock.json  package.json  pianoaule.py  pyproject.toml
